# AutoMLReportGen

./: .gitignore  README.md  main.py  pyproject.toml  temp.html  test.ipynb
autoreport/: __init__.py  cli.py  magics.py  tracker.py
autoreport.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
autoreport/analysis/: basic.py  curves.py  metrics.py  sanity.py
autoreport/autoreport.egg-info/: SOURCES.txt  requires.txt
autoreport/capture/: figures.py  lineage.py  runtime.py  variables.py
autoreport/core/: models.py
autoreport/io/: bundle.py  json_source.py
autoreport/rendering/: renderer.py
autoreport/rendering/templates/: default.html.j2
autoreports/: 8202878551.md  a150b29792.md  c3a30623ae.md
reportgen/: analysis.py  collector.py  comparer.py  reporter.py
reportgen/templates/: report_template.md.j2
src/autoreport/: __init__.py  magics.py  report.py  session.py  tracker.py
src/autoreport/templates/: simple.md.j2
