[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoreport"
version = "0.1.0"
description = "Lightweight auto-report generator for ML experiments in Jupyter"
authors = [{name = "serttyzar", email = "serttyzar@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "ipython>=8.0",
    "jinja2>=3.1",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3"
]

[project.scripts]
autoreport-demo = "autoreport.demo:run"
