[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automlreportgen"
version = "0.1.0"
description = "Auto ML Report Generator (MVP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
"pydantic>=2.3",
"jinja2>=3.1",
"typer>=0.12",
"matplotlib>=3.7",
"seaborn>=0.13",
"scikit-learn>=1.3",
]

[project.scripts]
automlreportgen = "autoreport.cli:run"